--- a/challenge_1/public/index.html
+++ b/challenge_1/public/index.html
@@ -1,2 +1,11 @@
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Historical Events Finder </title>
+</head>
+<body>
+  <h1>Historical Events Finder App</h1>
+  <div id="root"></div>
+  <script type="text/javascript" src="bundle.js"></script>
+</body>
+</html>
