--- a/challenge_2/public/index.html
+++ b/challenge_2/public/index.html
@@ -1,2 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Mini Apps 2 Challenge 2</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
+  </head>
+  <body>
+    <h1>Crypto Tracker App</h1>
+    <div id="root"></div>
+    <script type="text/javascript" src="bundle.js"></script>
+  </body>
+</html>
 
