--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,14 @@
+<!DOCTYPE html>
+<html lang = "en">
+  <head>
+    <meta charset="utf-8">
 
+    <title>Bowling Game</title>
+  </head>
+  <body>
+    <h1>Mini Apps Bowling Game</h1>
+    <div id="root"></div>
+    <script type="text/javascript" src="bundle.js"></script>
+  </body>
+</html>
 
